src/snapshots/spicy_language_server__test__completion-2.snap
---
source: src/lib.rs
expression: "server.completion(CompletionParams\n{\n    text_document_position:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(Url::from_file_path(\"/does_not_exist.spicy\").unwrap()),\n    Position::new(u32::MAX, 0),), work_done_progress_params:\n    WorkDoneProgressParams::default(), partial_result_params:\n    PartialResultParams::default(), context: None,\n}).await"
---
Ok(
    None,
)
