src/snapshots/spicy_language_server__test__semantic_tokens_full-2.snap
---
source: src/lib.rs
expression: "server.semantic_tokens_full(SemanticTokensParams\n{\n    text_document: TextDocumentIdentifier::new(uri),\n    work_done_progress_params: WorkDoneProgressParams::default(),\n    partial_result_params: PartialResultParams::default(),\n}).await"
---
Ok(
    Some(
        Tokens(
            SemanticTokens {
                result_id: None,
                data: [
                    SemanticToken {
                        delta_line: 1,
                        delta_start: 0,
                        length: 6,
                        token_type: 3,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 7,
                        length: 3,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 1,
                        delta_start: 0,
                        length: 4,
                        token_type: 3,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 5,
                        length: 1,
                        token_type: 2,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 4,
                        length: 4,
                        token_type: 3,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 5,
                        length: 1,
                        token_type: 8,
                        token_modifiers_bitset: 0,
                    },
                    SemanticToken {
                        delta_line: 0,
                        delta_start: 1,
                        length: 1,
                        token_type: 8,
                        token_modifiers_bitset: 0,
                    },
                ],
            },
        ),
    ),
)
